primers passos de preprocessing

--- a/codi.ipynb
+++ b/codi.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "# Practica APA - predicció superfície cremada d'un incendi\n",
-    "Sergi Curto Panisello\n",
+    "Sergi Curto Panisello,\n",
     "Joan Melchor Lladó\n",
     "\n",
     "## Imports"
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# Obtenim les dades\n",
+    "## Obtenim les dades\n",
     "Procedim a agafar les dades en format csv descarregades de https://datos.civio.es/dataset/todos-los-incendios-forestales/"
    ],
    "metadata": {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
@@ -93,8 +93,8 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('fires-all.csv')\n",
-    "print(data.describe())"
+    "df = pd.read_csv('fires-all.csv')\n",
+    "print(df.describe())"
    ],
    "metadata": {
     "collapsed": false,
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
@@ -170,7 +170,7 @@
    ],
    "source": [
     "# Si separem solament Catalunya\n",
-    "cat = data.loc[data['idcomunidad'] == 2]\n",
+    "cat = df.loc[df['idcomunidad'] == 2]\n",
     "print(cat.head)\n",
     "print(cat.shape)"
    ],
@@ -184,8 +184,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Separem target del dataset\n",
-    "Volem predir la superfície cremada donat un incendi per tant separem aquesta variable de la resta."
+    "## Preprocessing\n",
+    "\n",
+    "### Tractament de missing values"
    ],
    "metadata": {
     "collapsed": false,
@@ -196,22 +197,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
+     "data": {
+      "text/plain": "['lat', 'lng', 'causa_supuesta', 'muertos', 'heridos', 'gastos', 'perdidas']"
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = data.drop('superficie', axis=1)\n",
-    "y = data['superficie']\n",
+    "# Columnes amb missing values, també es pot veure al describe del\n",
+    "# dataset a les variables que no tinguin un count de 82640\n",
+    "df.columns[df.isnull().any()].tolist()\n",
     "\n",
-    "# Comprovem que al target no hi hagin nulls\n",
-    "print(y.isnull().values.any())"
+    "# Comencem per emplenar els missing values de muertos i heridos ja que\n",
+    "# si no hi han dades suposarem que són 0.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -223,7 +226,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Preprocessing\n"
+    "## Separem target del dataset\n",
+    "Volem predir la superfície cremada donat un incendi per tant separem aquesta variable de la resta."
    ],
    "metadata": {
     "collapsed": false,
@@ -231,6 +235,32 @@
      "name": "#%% md\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "X = df.drop('superficie', axis=1)\n",
+    "y = df['superficie']\n",
+    "\n",
+    "# Comprovem que al target no hi hagin nulls\n",
+    "print(y.isnull().values.any())\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": 39,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ]
   }
  ],
  "metadata": {
