--- a/codi.ipynb
+++ b/codi.ipynb
@@ -15,13 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import tabulate"
+    "import tabulate\n",
+    "from geopy.geocoders import Nominatim"
    ]
   },
   {
@@ -31,12 +32,15 @@
     "Procedim a agafar les dades en format csv descarregades de https://datos.civio.es/dataset/todos-los-incendios-forestales/"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
@@ -95,8 +99,8 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('fires-all.csv')\n",
-    "print(df.describe())"
+    "df = pd.read_csv('fires-all.csv').set_index('id')\n",
+    "print(df.describe())\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -107,89 +111,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<bound method NDFrame.head of                id  superficie       fecha        lat       lng  \\\n",
-      "423    2001080017        1.00  2001-02-22  41.667672  2.066639   \n",
-      "424    2001080032        6.00  2001-03-29  41.300741  1.666971   \n",
-      "425    2001080039        1.00  2001-04-07  41.474125  1.973610   \n",
-      "426    2001080041        1.33  2001-04-08  41.483501  1.584177   \n",
-      "427    2001080043        2.00  2001-04-08  41.511833  2.321732   \n",
-      "...           ...         ...         ...        ...       ...   \n",
-      "82298  2015430102        1.63  2015-11-25  41.266186  1.154032   \n",
-      "82299  2015430116       23.23  2015-06-09  41.175501  0.813588   \n",
-      "82300  2015430117       45.03  2015-08-24  40.940658  0.826569   \n",
-      "82301  2015430118       29.00  2015-08-29  41.268525  0.883916   \n",
-      "82302  2015430119        6.76  2015-10-22  41.004475  0.491856   \n",
-      "\n",
-      "       latlng_explicit  idcomunidad  idprovincia  idmunicipio  \\\n",
-      "423                  1            2            8          223   \n",
-      "424                  1            2            8          251   \n",
-      "425                  1            2            8           54   \n",
-      "426                  1            2            8          122   \n",
-      "427                  1            2            8          281   \n",
-      "...                ...          ...          ...          ...   \n",
-      "82298                1            2           43            5   \n",
-      "82299                1            2           43           55   \n",
-      "82300                1            2           43           13   \n",
-      "82301                1            2           43           49   \n",
-      "82302                1            2           43          106   \n",
-      "\n",
-      "                          municipio  ...  causa_supuesta  causa_desc  muertos  \\\n",
-      "423             SANT LLORENÇ SAVALL  ...             NaN          30      NaN   \n",
-      "424    SANTA MARGARIDA I ELS MONJOS  ...             1.0          19      NaN   \n",
-      "425                   CASTELLBISBAL  ...             1.0          19      NaN   \n",
-      "426                         MEDIONA  ...             NaN          20      1.0   \n",
-      "427                            TEIÀ  ...             1.0          19      NaN   \n",
-      "...                             ...  ...             ...         ...      ...   \n",
-      "82298                       ALCOVER  ...             NaN          20      NaN   \n",
-      "82299                        FALSET  ...             NaN           0      NaN   \n",
-      "82300            AMETLLA DE MAR, L'  ...             NaN           0      NaN   \n",
-      "82301        CORNUDELLA DE MONTSANT  ...             1.0           0      NaN   \n",
-      "82302               PINELL BRAI, EL  ...             NaN          12      NaN   \n",
-      "\n",
-      "       heridos  time_ctrl  time_ext  personal  medios  gastos  perdidas  \n",
-      "423        NaN        130       160        27       4     NaN       NaN  \n",
-      "424        NaN        171      1221        58      16     NaN       NaN  \n",
-      "425        NaN         87       147        60      10     NaN       NaN  \n",
-      "426        NaN        245       410        30      10     NaN       NaN  \n",
-      "427        NaN        110       180        30       9     NaN       NaN  \n",
-      "...        ...        ...       ...       ...     ...     ...       ...  \n",
-      "82298      NaN        165       300        50      11     NaN       NaN  \n",
-      "82299      NaN        390      1518       196      75     NaN       NaN  \n",
-      "82300      NaN        618      2278       233      64     NaN       NaN  \n",
-      "82301      NaN       1615      3013       210      53     NaN       NaN  \n",
-      "82302      NaN        115       130        81      17     NaN       NaN  \n",
-      "\n",
-      "[1325 rows x 21 columns]>\n",
-      "Shape\n",
-      "(1325, 21)\n",
-      "ID especial\n",
-      "|      |         id |   superficie | fecha      |     lat |      lng |   latlng_explicit |   idcomunidad |   idprovincia |   idmunicipio | municipio       |   causa |   causa_supuesta |   causa_desc |   muertos |   heridos |   time_ctrl |   time_ext |   personal |   medios |   gastos |   perdidas |\n",
-      "|-----:|-----------:|-------------:|:-----------|--------:|---------:|------------------:|--------------:|--------------:|--------------:|:----------------|--------:|-----------------:|-------------:|----------:|----------:|------------:|-----------:|-----------:|---------:|---------:|-----------:|\n",
-      "| 3476 | 2001320802 |          4   | 2001-08-11 | 42.183  | -7.64379 |                 1 |             3 |            32 |            89 | VILAR DE BARRIO |       4 |                1 |            2 |       nan |       nan |          45 |         54 |         16 |        2 |      nan |        nan |\n",
-      "| 8423 | 2002151000 |          8.5 | 2002-07-25 | 42.7868 | -8.40984 |                 1 |             3 |            15 |            89 | VEDRA           |       4 |                1 |            2 |       nan |       nan |         255 |        400 |         54 |        9 |      nan |      10372 |\n",
-      "ID cremat molt\n",
-      "               id  superficie       fecha        lat       lng  \\\n",
-      "71833  2012460248     28879.1  2012-06-28  39.269116 -0.955787   \n",
-      "\n",
-      "       latlng_explicit  idcomunidad  idprovincia  idmunicipio  \\\n",
-      "71833                1            9           46           99   \n",
-      "\n",
-      "              municipio  ...  causa_supuesta  causa_desc  muertos  heridos  \\\n",
-      "71833  CORTES DE PALLÁS  ...             NaN          30      NaN      NaN   \n",
-      "\n",
-      "       time_ctrl  time_ext  personal  medios  gastos    perdidas  \n",
-      "71833      10320     24772      1540     146     NaN  12607966.0  \n",
-      "\n",
-      "[1 rows x 21 columns]\n"
+      "Mont-ras, Baix Empordà, Girona, Catalunya, España\n",
+      "(41.9080196, 3.144796)\n",
+      "{'place_id': 256938123, 'licence': 'Data © OpenStreetMap contributors, ODbL 1.0. https://osm.org/copyright', 'osm_type': 'relation', 'osm_id': 345519, 'boundingbox': ['41.8670361', '41.9185439', '3.1235748', '3.1795064'], 'lat': '41.9080196', 'lon': '3.144796', 'display_name': 'Mont-ras, Baix Empordà, Girona, Catalunya, España', 'class': 'boundary', 'type': 'administrative', 'importance': 0.6785845118429703, 'icon': 'https://nominatim.openstreetmap.org/ui/mapicons//poi_boundary_administrative.p.20.png'}\n"
      ]
     }
    ],
+   "source": [
+    "geolocator = Nominatim(user_agent=\"apaProject\")\n",
+    "location = geolocator.geocode('mont-ras')\n",
+    "print(location.address)\n",
+    "print((location.latitude, location.longitude))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Si separem solament Catalunya\n",
     "cat = df.loc[df['idcomunidad'] == 2]\n",
@@ -227,17 +177,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['lat', 'lng', 'causa_supuesta', 'muertos', 'heridos', 'gastos', 'perdidas']\n",
-      "[]\n"
-     ]
-    }
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(df.duplicated(subset='id', keep=\"first\"))"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Columnes amb missing values, també es pot veure al describe del\n",
     "# dataset a les variables que no tinguin un count de 82640\n",
@@ -272,23 +227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(72, 21)\n",
-      "(0, 21)\n",
-      "Empty DataFrame\n",
-      "Columns: [id, superficie, fecha, lat, lng, latlng_explicit, idcomunidad, idprovincia, idmunicipio, municipio, causa, causa_supuesta, causa_desc, muertos, heridos, time_ctrl, time_ext, personal, medios, gastos, perdidas]\n",
-      "Index: []\n",
-      "\n",
-      "[0 rows x 21 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "aux = df.loc[df['idmunicipio'] == 999]\n",
     "latMissing = df.loc[np.isnan(df['lat'])]\n",
@@ -325,16 +266,8 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 36,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ]
+   "execution_count": null,
+   "outputs": []
   }
  ],
  "metadata": {
