Afegit el cas particular de Bera/Vera de bidasoa ja que tenia null a les coordenades, modificat l'script principal codi.ipynb que solament agafi el coordsCorregides.csv generat per corregirCoordenades.py ja que no em funcionava si cridava a la funció

--- a/codi.ipynb
+++ b/codi.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -148,36 +148,35 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Arreglar lat i long"
+    "#### Arreglar lat i long\n",
+    "\n",
+    "Per arreglar lat i long ho fem en un altre document \"corregirCoordenades.py\", ja que és un procés més lent.\n",
+    "Es dedica a comprovar les coordenades de cada instància per veure si es corresponen a un diccionari generat\n",
+    "anteriorment amb el fitxer \"obtenirCoordenades.py\". Hi ha una explicació més extensa a la documentació."
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n",
-     "is_executing": true
+     "name": "#%% md\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['causa_supuesta', 'muertos', 'heridos', 'gastos', 'perdidas']\n"
      ]
     }
    ],
    "source": [
-    "import corregirCoordenades\n",
-    "# idmunicipio 999, i 998 ens els carreguem ja que són incendis originats fora d'Espanya\n",
-    "df.drop(df.loc[df[\"idmunicipio\"] == 999].index, inplace=True)\n",
-    "df.drop(df.loc[df[\"idmunicipio\"] == 998].index, inplace=True)\n",
-    "print(df.columns[df.isnull().any()].tolist())\n",
-    "\n",
-    "df = corregirCoordenades.correctCoords(df)"
+    "df = pd.read_csv('coordsCorregides.csv')\n",
+    "# Comprovem que ja no queden nulls a coordenades\n",
+    "print(df.columns[df.isnull().any()].tolist())"
    ],
    "metadata": {
     "collapsed": false,
@@ -188,16 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# Comencem per emplenar els missing values de muertos i heridos ja que\n",
     "# si no hi han dades suposarem que són 0.\n",
     "df['muertos'].fillna(0, inplace=True)\n",
     "df['heridos'].fillna(0, inplace=True)\n",
-    "\n",
-    "# Sobre la \"causa supuesta\" és normal que hi hagin instàncies sense valor ja que\n",
-    "# Causa supuesta la posem a 0\n",
+    "# Sobre la \"causa supuesta\" és normal que hi hagin instàncies sense valor ja que és o 1 o nan per tant els posem a 0\n",
     "df['causa_supuesta'].fillna(0, inplace=True)"
    ],
    "metadata": {
@@ -209,8 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# Fem knn\n",
     "df['gastos'].fillna(0, inplace=True)\n",
@@ -229,26 +234,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                 id    superficie           lat           lng  \\\n",
-      "count  8.252300e+04  82523.000000  82523.000000  82523.000000   \n",
-      "mean   2.007258e+09     19.092067     41.719125     -5.557423   \n",
-      "std    4.246907e+06    207.085686      1.926842      2.443268   \n",
-      "min    2.001010e+09      1.000000     27.707180    -17.980518   \n",
-      "25%    2.003390e+09      1.500000     40.775439     -7.248247   \n",
-      "50%    2.006330e+09      3.000000     42.342616     -5.959559   \n",
-      "75%    2.011150e+09      7.100000     43.127795     -4.217251   \n",
-      "max    2.015510e+09  28879.100000     43.761264      4.158954   \n",
+      "         Unnamed: 0            id    superficie           lat           lng  \\\n",
+      "count  82527.000000  8.252700e+04  82527.000000  82527.000000  82527.000000   \n",
+      "mean   41310.892835  2.007258e+09     19.091822     41.719200     -5.557235   \n",
+      "std    23855.081820  4.246828e+06    207.080716      1.926826      2.443357   \n",
+      "min        0.000000  2.001010e+09      1.000000     27.707180    -17.980518   \n",
+      "25%    20658.500000  2.003390e+09      1.500000     40.775726     -7.248053   \n",
+      "50%    41304.000000  2.006330e+09      3.000000     42.342648     -5.959559   \n",
+      "75%    61959.500000  2.011150e+09      7.100000     43.127865     -4.217251   \n",
+      "max    82639.000000  2.015510e+09  28879.100000     43.761264      4.158954   \n",
       "\n",
       "       latlng_explicit   idcomunidad   idprovincia   idmunicipio  \\\n",
-      "count     82523.000000  82523.000000  82523.000000  82523.000000   \n",
-      "mean          0.640827      7.849969     28.412018     76.526471   \n",
-      "std           0.479761      5.419613     11.724082     92.866264   \n",
+      "count     82527.000000  82527.000000  82527.000000  82527.000000   \n",
+      "mean          0.640808      7.850219     28.412144     76.534879   \n",
+      "std           0.479766      5.419601     11.723812     92.871866   \n",
       "min           0.000000      1.000000      1.000000      1.000000   \n",
       "25%           0.000000      3.000000     21.000000     27.000000   \n",
       "50%           1.000000      5.000000     32.000000     52.000000   \n",
@@ -256,9 +261,9 @@
       "max           1.000000     18.000000     51.000000    913.000000   \n",
       "\n",
       "              causa  causa_supuesta    causa_desc       muertos       heridos  \\\n",
-      "count  82523.000000    82523.000000  82523.000000  82523.000000  82523.000000   \n",
-      "mean       3.695612        0.562413     12.204646      0.000691      0.007331   \n",
-      "std        1.032699        0.496092     24.620610      0.054260      0.143130   \n",
+      "count  82527.000000    82527.000000  82527.000000  82527.000000  82527.000000   \n",
+      "mean       3.695530        0.562410     12.205884      0.000691      0.007331   \n",
+      "std        1.032742        0.496093     24.621257      0.054259      0.143127   \n",
       "min        1.000000        0.000000      0.000000      0.000000      0.000000   \n",
       "25%        4.000000        0.000000      0.000000      0.000000      0.000000   \n",
       "50%        4.000000        1.000000      2.000000      0.000000      0.000000   \n",
@@ -266,9 +271,9 @@
       "max        6.000000        1.000000     99.000000     11.000000     12.000000   \n",
       "\n",
       "           time_ctrl       time_ext      personal        medios        gastos  \\\n",
-      "count   82523.000000   82523.000000  82523.000000  82523.000000  8.252300e+04   \n",
-      "mean      235.033615     520.073846     21.030791      3.122184  1.050562e+03   \n",
-      "std       898.832359    2556.820552     46.510646      6.039405  1.499463e+04   \n",
+      "count   82527.000000   82527.000000  82527.000000  82527.000000  8.252700e+04   \n",
+      "mean      235.027046     520.056200     21.030584      3.122093  1.050511e+03   \n",
+      "std       898.811426    2556.760004     46.509613      6.039275  1.499426e+04   \n",
       "min         0.000000       0.000000      0.000000      0.000000  0.000000e+00   \n",
       "25%        64.000000     134.000000      5.000000      1.000000  0.000000e+00   \n",
       "50%       117.000000     221.000000     11.000000      2.000000  0.000000e+00   \n",
@@ -276,13 +281,13 @@
       "max    132555.000000  529682.000000   3979.000000    310.000000  1.426641e+06   \n",
       "\n",
       "           perdidas  \n",
-      "count  8.252300e+04  \n",
-      "mean   1.290329e+04  \n",
-      "std    2.718957e+05  \n",
+      "count  8.252700e+04  \n",
+      "mean   1.290339e+04  \n",
+      "std    2.718892e+05  \n",
       "min   -2.896100e+04  \n",
       "25%    0.000000e+00  \n",
       "50%    0.000000e+00  \n",
-      "75%    6.355000e+02  \n",
+      "75%    6.360000e+02  \n",
       "max    3.064011e+07  \n"
      ]
     }
@@ -299,20 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 21)\n",
-      "(0, 21)\n",
+      "(0, 22)\n",
+      "(0, 22)\n",
       "Empty DataFrame\n",
-      "Columns: [id, superficie, fecha, lat, lng, latlng_explicit, idcomunidad, idprovincia, idmunicipio, municipio, causa, causa_supuesta, causa_desc, muertos, heridos, time_ctrl, time_ext, personal, medios, gastos, perdidas]\n",
+      "Columns: [Unnamed: 0, id, superficie, fecha, lat, lng, latlng_explicit, idcomunidad, idprovincia, idmunicipio, municipio, causa, causa_supuesta, causa_desc, muertos, heridos, time_ctrl, time_ext, personal, medios, gastos, perdidas]\n",
       "Index: []\n",
       "\n",
-      "[0 rows x 21 columns]\n"
+      "[0 rows x 22 columns]\n"
      ]
     }
    ],
@@ -352,7 +357,7 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 44,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
