Primera versió knn per emplenar NaN

--- a/codi.ipynb
+++ b/codi.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -186,8 +186,17 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Arreglar muertos, heridos y causa_supuesta"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Comencem per emplenar els missing values de muertos i heridos ja que\n",
@@ -205,21 +214,81 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Arreglar gastos y perdidas\n",
+    "\n",
+    "Per a fer aquesta part hem de netejar una mica més el dataset, la columna de \"idmunicipio\" és incorrecte, ja que\n",
+    "diferents municipis comparteixen el mateix id tot i està a cada punta del territori. També eliminem la columna municipio\n",
+    "ja que amb la latitud i longitud ja sabem on està localitzat l'incendi.\n",
+    "\n",
+    "Primer separem target del dataset, volem predir la superfície cremada donat un incendi per\n",
+    "tant separem aquesta variable de la resta.\n",
+    "\n",
+    "https://medium.com/@kyawsawhtoon/a-guide-to-knn-imputation-95e2dc496e"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "           id  superficie     fecha        lat       lng  latlng_explicit  \\\n",
+      "0  2001010001        3.70  20010318  42.954656 -2.325719                1   \n",
+      "1  2001010004        1.50  20010324  42.552183 -2.640673                1   \n",
+      "2  2001010005        1.50  20010416  42.493480 -2.575597                0   \n",
+      "3  2001010008        7.50  20010525  42.946479 -2.485163                1   \n",
+      "4  2001010017        1.04  20010720  43.091427 -3.069773                0   \n",
+      "\n",
+      "   idcomunidad  idprovincia  causa  causa_supuesta  causa_desc  muertos  \\\n",
+      "0            1            1      4             0.0           2      0.0   \n",
+      "1            1            1      2             1.0          10      0.0   \n",
+      "2            1            1      2             0.0          10      0.0   \n",
+      "3            1            1      4             0.0           2      0.0   \n",
+      "4            1            1      5             0.0           0      0.0   \n",
+      "\n",
+      "   heridos  time_ctrl  time_ext  personal  medios  gastos  perdidas  \n",
+      "0      0.0        150       180        10       2   661.0     553.0  \n",
+      "1      0.0        275       290         4       1   661.0     451.0  \n",
+      "2      0.0        135       165         4       1   312.0     902.0  \n",
+      "3      0.0        335       410         6       1  1082.0   15338.0  \n",
+      "4      0.0         45        75        11       2   270.0    2866.0  \n",
       "[]\n"
      ]
     }
    ],
    "source": [
+    "# Arreglar valors massa petits posant-lo a NaN\n",
+    "df.at[df.loc[df[\"gastos\"] < 200].index, 'gastos'] = np.NaN\n",
+    "df.at[df.loc[df[\"perdidas\"] < 200].index, 'perdidas'] = np.NaN\n",
+    "df[\"fecha\"] = df[\"fecha\"].apply(lambda f: f.replace('-', ''))\n",
+    "df.drop(['idmunicipio', 'municipio'], axis=1, inplace=True)\n",
+    "print(df.head())\n",
+    "\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scaler = MinMaxScaler()\n",
+    "df = pd.DataFrame(scaler.fit_transform(df), columns=df.columns)\n",
+    "\n",
+    "# Separem el target\n",
+    "# X = df.drop(['superficie', 'idmunicipio', 'municipio'], axis=1)\n",
+    "# y = df['superficie']\n",
+    "#\n",
+    "\n",
+    "\n",
+    "# # Apliquem KNN per tal d'emplenar els missing values\n",
+    "from sklearn.impute import KNNImputer\n",
+    "imputer = KNNImputer()\n",
+    "df = pd.DataFrame(imputer.fit_transform(df), columns=df.columns)\n",
+    "\n",
     "# Fem knn\n",
-    "df['gastos'].fillna(0, inplace=True)\n",
-    "df['perdidas'].fillna(0, inplace=True)\n",
+    "# df['gastos'].fillna(0, inplace=True)\n",
+    "# df['perdidas'].fillna(0, inplace=True)\n",
     "\n",
     "# df.describe()\n",
     "\n",
@@ -234,139 +303,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Unnamed: 0            id    superficie           lat           lng  \\\n",
-      "count  82527.000000  8.252700e+04  82527.000000  82527.000000  82527.000000   \n",
-      "mean   41310.892835  2.007258e+09     19.091822     41.719200     -5.557235   \n",
-      "std    23855.081820  4.246828e+06    207.080716      1.926826      2.443357   \n",
-      "min        0.000000  2.001010e+09      1.000000     27.707180    -17.980518   \n",
-      "25%    20658.500000  2.003390e+09      1.500000     40.775726     -7.248053   \n",
-      "50%    41304.000000  2.006330e+09      3.000000     42.342648     -5.959559   \n",
-      "75%    61959.500000  2.011150e+09      7.100000     43.127865     -4.217251   \n",
-      "max    82639.000000  2.015510e+09  28879.100000     43.761264      4.158954   \n",
+      "             id  superficie     fecha       lat       lng  latlng_explicit  \\\n",
+      "0  0.000000e+00    0.000093  0.001538  0.949757  0.707099              1.0   \n",
+      "1  2.068965e-07    0.000017  0.001580  0.924687  0.692873              1.0   \n",
+      "2  2.758621e-07    0.000017  0.002232  0.921030  0.695812              0.0   \n",
+      "3  4.827586e-07    0.000225  0.003004  0.949247  0.699897              1.0   \n",
+      "4  1.103448e-06    0.000001  0.004386  0.958276  0.673491              0.0   \n",
       "\n",
-      "       latlng_explicit   idcomunidad   idprovincia   idmunicipio  \\\n",
+      "   idcomunidad  idprovincia  causa  causa_supuesta  causa_desc  muertos  \\\n",
+      "0          0.0          0.0    0.6             0.0    0.020202      0.0   \n",
+      "1          0.0          0.0    0.2             1.0    0.101010      0.0   \n",
+      "2          0.0          0.0    0.2             0.0    0.101010      0.0   \n",
+      "3          0.0          0.0    0.6             0.0    0.020202      0.0   \n",
+      "4          0.0          0.0    0.8             0.0    0.000000      0.0   \n",
+      "\n",
+      "   heridos  time_ctrl  time_ext  personal    medios    gastos  perdidas  \n",
+      "0      0.0   0.001132  0.000340  0.002513  0.006452  0.000323  0.000012  \n",
+      "1      0.0   0.002075  0.000547  0.001005  0.003226  0.000323  0.000008  \n",
+      "2      0.0   0.001018  0.000312  0.001005  0.003226  0.000079  0.000023  \n",
+      "3      0.0   0.002527  0.000774  0.001508  0.003226  0.000618  0.000494  \n",
+      "4      0.0   0.000339  0.000142  0.002765  0.006452  0.000049  0.000087  \n",
+      "                 id    superficie         fecha           lat           lng  \\\n",
+      "count  82527.000000  82527.000000  82527.000000  82527.000000  82527.000000   \n",
+      "mean       0.430865      0.000626      0.426784      0.872801      0.561137   \n",
+      "std        0.292885      0.007171      0.300140      0.120021      0.110362   \n",
+      "min        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+      "25%        0.164148      0.000017      0.147503      0.814032      0.484766   \n",
+      "50%        0.366899      0.000069      0.358686      0.911635      0.542965   \n",
+      "75%        0.699328      0.000211      0.710038      0.960546      0.621662   \n",
+      "max        1.000000      1.000000      1.000000      1.000000      1.000000   \n",
+      "\n",
+      "       latlng_explicit   idcomunidad   idprovincia         causa  \\\n",
       "count     82527.000000  82527.000000  82527.000000  82527.000000   \n",
-      "mean          0.640808      7.850219     28.412144     76.534879   \n",
-      "std           0.479766      5.419601     11.723812     92.871866   \n",
-      "min           0.000000      1.000000      1.000000      1.000000   \n",
-      "25%           0.000000      3.000000     21.000000     27.000000   \n",
-      "50%           1.000000      5.000000     32.000000     52.000000   \n",
-      "75%           1.000000     14.000000     36.000000     91.000000   \n",
-      "max           1.000000     18.000000     51.000000    913.000000   \n",
+      "mean          0.640808      0.402954      0.548243      0.539106   \n",
+      "std           0.479766      0.318800      0.234476      0.206548   \n",
+      "min           0.000000      0.000000      0.000000      0.000000   \n",
+      "25%           0.000000      0.117647      0.400000      0.600000   \n",
+      "50%           1.000000      0.235294      0.620000      0.600000   \n",
+      "75%           1.000000      0.764706      0.700000      0.600000   \n",
+      "max           1.000000      1.000000      1.000000      1.000000   \n",
       "\n",
-      "              causa  causa_supuesta    causa_desc       muertos       heridos  \\\n",
-      "count  82527.000000    82527.000000  82527.000000  82527.000000  82527.000000   \n",
-      "mean       3.695530        0.562410     12.205884      0.000691      0.007331   \n",
-      "std        1.032742        0.496093     24.621257      0.054259      0.143127   \n",
-      "min        1.000000        0.000000      0.000000      0.000000      0.000000   \n",
-      "25%        4.000000        0.000000      0.000000      0.000000      0.000000   \n",
-      "50%        4.000000        1.000000      2.000000      0.000000      0.000000   \n",
-      "75%        4.000000        1.000000     10.000000      0.000000      0.000000   \n",
-      "max        6.000000        1.000000     99.000000     11.000000     12.000000   \n",
+      "       causa_supuesta    causa_desc       muertos       heridos     time_ctrl  \\\n",
+      "count    82527.000000  82527.000000  82527.000000  82527.000000  82527.000000   \n",
+      "mean         0.562410      0.123292      0.000063      0.000611      0.001773   \n",
+      "std          0.496093      0.248700      0.004933      0.011927      0.006781   \n",
+      "min          0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+      "25%          0.000000      0.000000      0.000000      0.000000      0.000483   \n",
+      "50%          1.000000      0.020202      0.000000      0.000000      0.000883   \n",
+      "75%          1.000000      0.101010      0.000000      0.000000      0.001584   \n",
+      "max          1.000000      1.000000      1.000000      1.000000      1.000000   \n",
       "\n",
-      "           time_ctrl       time_ext      personal        medios        gastos  \\\n",
-      "count   82527.000000   82527.000000  82527.000000  82527.000000  8.252700e+04   \n",
-      "mean      235.027046     520.056200     21.030584      3.122093  1.050511e+03   \n",
-      "std       898.811426    2556.760004     46.509613      6.039275  1.499426e+04   \n",
-      "min         0.000000       0.000000      0.000000      0.000000  0.000000e+00   \n",
-      "25%        64.000000     134.000000      5.000000      1.000000  0.000000e+00   \n",
-      "50%       117.000000     221.000000     11.000000      2.000000  0.000000e+00   \n",
-      "75%       210.000000     414.000000     23.000000      3.000000  0.000000e+00   \n",
-      "max    132555.000000  529682.000000   3979.000000    310.000000  1.426641e+06   \n",
-      "\n",
-      "           perdidas  \n",
-      "count  8.252700e+04  \n",
-      "mean   1.290339e+04  \n",
-      "std    2.718892e+05  \n",
-      "min   -2.896100e+04  \n",
-      "25%    0.000000e+00  \n",
-      "50%    0.000000e+00  \n",
-      "75%    6.360000e+02  \n",
-      "max    3.064011e+07  \n"
+      "           time_ext      personal        medios        gastos      perdidas  \n",
+      "count  82527.000000  82527.000000  82527.000000  82527.000000  82527.000000  \n",
+      "mean       0.000982      0.005285      0.010071      0.005241      0.000866  \n",
+      "std        0.004827      0.011689      0.019482      0.018936      0.009093  \n",
+      "min        0.000000      0.000000      0.000000      0.000000      0.000000  \n",
+      "25%        0.000253      0.001257      0.003226      0.000595      0.000064  \n",
+      "50%        0.000417      0.002765      0.006452      0.001576      0.000163  \n",
+      "75%        0.000782      0.005780      0.009677      0.004154      0.000417  \n",
+      "max        1.000000      1.000000      1.000000      1.000000      1.000000  \n"
      ]
     }
    ],
    "source": [
-    "print(df.describe())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0, 22)\n",
-      "(0, 22)\n",
-      "Empty DataFrame\n",
-      "Columns: [Unnamed: 0, id, superficie, fecha, lat, lng, latlng_explicit, idcomunidad, idprovincia, idmunicipio, municipio, causa, causa_supuesta, causa_desc, muertos, heridos, time_ctrl, time_ext, personal, medios, gastos, perdidas]\n",
-      "Index: []\n",
-      "\n",
-      "[0 rows x 22 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "aux = df.loc[df['idmunicipio'] == 999]\n",
-    "latMissing = df.loc[np.isnan(df['lat'])]\n",
-    "print(aux.shape)\n",
-    "print(latMissing.shape)\n",
-    "print(latMissing)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Separem target del dataset\n",
-    "Volem predir la superfície cremada donat un incendi per tant separem aquesta variable de la resta."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "X = df.drop('superficie', axis=1)\n",
-    "y = df['superficie']\n",
+    "print(df.head())\n",
+    "print(df.describe())\n",
     "\n",
-    "# Comprovem que al target no hi hagin nulls\n",
-    "print(y.isnull().values.any())\n"
+    "df.to_csv(\"noNaNOriginalLatLng.csv\")\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "execution_count": 13,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ]
+   }
   }
  ],
  "metadata": {
